feat: Implement the reservation microservice with core logic, payment integration, and event-driven communication.